# image-editor

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: code-validation.yml  packages-validation.yml  upload-binaries.yml  upload-plugins.yml
configs/git/hooks/: pre-push
modules/blur-plugin/: Cargo.toml  README.md
modules/blur-plugin/src/: lib.rs  params.rs  utils.rs
modules/common/: Cargo.toml  README.md
modules/common/src/: constants.rs  error.rs  lib.rs  plugin.rs  utils.rs
modules/image-processor/: Cargo.toml  README.md
modules/image-processor/examples/: blur_plugin.rs  mirror_plugin.rs
modules/image-processor/src/: configs.rs  error.rs  logging.rs  main.rs  utils.rs
modules/image-processor/tests/: bin.rs  mod.rs  stub.rs  utils.rs
modules/mirror-plugin/: Cargo.toml  README.md
modules/mirror-plugin/src/: lib.rs  params.rs  utils.rs
