[workspace]
resolver = "3"
members = [
    "modules/blur-plugin",
    "modules/common",
    "modules/image-processor",
    "modules/mirror-plugin"
]

[workspace.package]
version = "0.1.0"
description = "Image editor"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Arthur Hovhannisyan <arthurhovhannisyan31@gmail.com>"]
repository = "https://github.com/arthurhovhannisyan31/image-editor"
rust-version = "1.93.0"

[workspace.dependencies]
anyhow = "1.0"
common = { path = "./modules/common" }
image = "0.25"
libloading = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"