[package]
name = "blur-plugin"
description = "Blur plugin"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
common.workspace = true
libblur = "0.23.1"
serde.workspace = true
serde_json.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
