[package]
name = "common"
description = "Common modules"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
image.workspace = true
thiserror.workspace = true
libloading.workspace = true