[package]
name = "image-processor"
description = "Image processor"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
libloading = "0.9.0"
thiserror.workspace = true
