[package]
name = "image-processor"
description = "Image processor"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
common.workspace = true
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", features = [] }
libloading.workspace = true
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }