[package]
name = "mirror-plugin"
description = "Mirror plugin"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
common.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
crate-type = ["lib", "cdylib"]